// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotosTab component should render correctly after data loads 1`] = `
<FlatList
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "id": 1,
        "imageUrl": "http://image",
      },
    ]
  }
  extraData={false}
  keyExtractor={[Function]}
  renderItem={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
      Object {
        "paddingVertical": 8,
      },
    ]
  }
/>
`;

exports[`PhotosTab component should render correctly before data loads 1`] = `<View />`;

exports[`PhotosTab component should render correctly with no photos 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#CCEEEC",
      "flexDirection": "row",
      "flexGrow": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexGrow": 1,
      }
    }
  >
    <Icon
      color="#00A499"
      name="ios-camera"
      size={45}
      style={
        Object {
          "height": 28,
          "lineHeight": 34,
          "marginBottom": 8,
        }
      }
    />
    <Text
      weight="bold"
    >
      Photo Gallery
    </Text>
    <Text
      family="archer"
      size="large"
    >
      Upload Progress Photos
    </Text>
    <View
      style={
        Object {
          "borderBottomColor": "#00A499",
          "borderBottomWidth": 1,
          "marginVertical": 8,
          "width": 60,
        }
      }
    />
    <Text
      style={
        Object {
          "marginHorizontal": 16,
        }
      }
      textAlign="center"
    >
      Keep everyone updated with the latest progress and inspiration photos
    </Text>
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginHorizontal": 8,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "marginTop": 16,
          }
        }
      >
        <IconButton
          accessibilityLabel="Add Project Photos"
          borders={false}
          color="primary"
          iconName="md-log-in"
          iconSize="small"
          iconStyle={
            Object {
              "transform": Array [
                Object {
                  "rotateZ": "-90deg",
                },
              ],
            }
          }
          onPress={[Function]}
          style={
            Object {
              "marginTop": 8,
            }
          }
          text="Add Project Photos"
          textColor="white"
          trackAction={undefined}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`PhotosTab function tests initial state 1`] = `
Object {
  "initialLoading": true,
}
`;

exports[`PhotosTab function tests mapDispatchToProps 1`] = `
Object {
  "actions": Object {
    "createEvent": undefined,
    "getPhotos": undefined,
    "trackAction": undefined,
  },
}
`;

exports[`PhotosTab function tests mapStateToProps 1`] = `
Object {
  "error": "",
  "loading": false,
  "photos": Array [
    Object {
      "id": 1,
    },
  ],
  "project": Object {},
  "user": Object {},
}
`;

exports[`PhotosTab function tests renderAddPhotosButton primary 1`] = `
<IconButton
  accessibilityLabel="Add Project Photos"
  borders={false}
  color="primary"
  iconName="md-log-in"
  iconSize="small"
  iconStyle={
    Object {
      "transform": Array [
        Object {
          "rotateZ": "-90deg",
        },
      ],
    }
  }
  onPress={[Function]}
  style={
    Object {
      "marginTop": 8,
    }
  }
  text="Add Project Photos"
  textColor="white"
  trackAction={undefined}
/>
`;

exports[`PhotosTab function tests renderAddPhotosButton white 1`] = `
<IconButton
  accessibilityLabel="Add Project Photos"
  borders={false}
  color="white"
  iconName="md-log-in"
  iconSize="small"
  iconStyle={
    Object {
      "transform": Array [
        Object {
          "rotateZ": "-90deg",
        },
      ],
    }
  }
  onPress={[Function]}
  style={
    Object {
      "marginTop": 8,
    }
  }
  text="Add Project Photos"
  textColor="secondary"
  trackAction={undefined}
/>
`;

exports[`PhotosTab function tests renderHeader 1`] = `
<View
  style={
    Object {
      "marginBottom": 8,
    }
  }
>
  <IconButton
    accessibilityLabel="Add Project Photos"
    borders={false}
    color="white"
    iconName="md-log-in"
    iconSize="small"
    iconStyle={
      Object {
        "transform": Array [
          Object {
            "rotateZ": "-90deg",
          },
        ],
      }
    }
    onPress={[Function]}
    style={
      Object {
        "marginTop": 8,
      }
    }
    text="Add Project Photos"
    textColor="secondary"
    trackAction={undefined}
  />
</View>
`;

exports[`PhotosTab function tests renderPhoto 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "paddingBottom": 8,
        "paddingHorizontal": 8,
      },
      Object {
        "paddingTop": 8,
      },
    ]
  }
>
  <TouchableOpacity
    onPress={[Function]}
    trackAction={undefined}
  >
    <Image
      height={304}
      resizeMode="contain"
      source={
        Object {
          "uri": "http://image",
        }
      }
      width={304}
    />
  </TouchableOpacity>
</View>
`;

exports[`PhotosTab function tests setScreenTrackingInformation 1`] = `
Object {
  "name": "build:app:projects:details:photos",
}
`;
